css/style.css
@import url('https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'PT Sans', sans-serif;
}

ul, ol, menu {list-style: none;}

a {text-decoration: none; color: white;}

img {max-width: 100%;}

.flex {display: flex;}

/* LAYOUT ====================================== */

body {
    height: 100vh;
    flex-direction: column;
}

.container {
    overflow: hidden;
    flex-grow: 1;
    background-color: var(--container-color-bg);
}

header {
    flex-basis: 230px;
    flex-shrink: 0;
    background-color: var(--header-color-bg);
    flex-direction: column;
    overflow-y: auto;
}

main {
    flex-grow: 1;
    flex-direction: column;
}

.content {
    flex-grow: 1;
    overflow-y: auto;
    height: 100%;
}

.content::-webkit-scrollbar, header::-webkit-scrollbar {
    width: 15px;
}

.content::-webkit-scrollbar-track, header::-webkit-scrollbar-track {
    background-color: #f9f9f9;
}

.content::-webkit-scrollbar-thumb, header::-webkit-scrollbar-thumb {
    background-color: #c8c8c8;
    border-radius: calc(15px / 2);
    border: 3px solid #f9f9f9;
}

aside {
    flex-basis: 90px;
    flex-shrink: 0;
    background-color: var(--aside-color-bg);
    z-index: 100;
}

:root {
    /* ASIDE */
    --aside-color-bg: #282828;

    /* HEADER */
    --header-color-bg: #000;
    --color-default_link: #686868;
    --color-hover_link: #fff;
    --header-color-mini_bar: #adff2f;
    --header-color-title: #fff;

    --header-transition-time: 0.2s;

    --header-padding-horizontal: 20px;

    /* CONTAINER */
    --container-color-bg: #141922;

}

/* HEADER ========================================*/
/* LOGO ______________________________*/
.logo {
    justify-content: center;
    align-items: center;
    flex-basis: 90px;
    flex-shrink: 0;
}

.logo .large {
    width: 130;
    padding: 0 20px;
}

.logo .small {
    display: none;
    padding: 0 10px;
    width: 100%;
}

/* NAV ______________________________*/

/* INPUT FOR NAV LABEL */
body input[name="nav"] {
    display: none;
}

header nav {
    padding: 0 var(--header-padding-horizontal);
}

header nav label {
    display: flex;
    align-items: center;
    gap: 5px;
    height: 2rem;
    position: relative;
    color: var(--color-default_link);
    transition: color var(--header-transition-time);
    cursor: pointer;
}

header nav label img {
    width: 1.2rem;
    aspect-ratio: 1;
    text-align: center;
    filter: opacity(0.5);
    transition: filter var(--header-transition-time);
}

header nav label:hover img {
    filter: opacity(1);
}

header nav .library i {
    transform: rotateY(180deg);
}

/* HOVER ______________________________*/
header nav label:hover {
    color: var(--color-hover_link);
}

/* ACTIVER ______________________________*/
body input[name="nav"]#home:checked ~ .container header nav label.but_home::before {
    content: '';
    display: block;
    background-color: var(--header-color-mini_bar);
    width: 3px;
    height: 100%;
    position: absolute;
    top: 0;
    left: calc(var(--header-padding-horizontal) * -1);
}

body input[name="nav"]#home:checked ~ .container header nav label.but_home img {
    filter: opacity(1);
}

body input[name="nav"]#home:checked ~ .container header nav label.but_home {
    color: var(--color-hover_link);
}

body input[name="nav"]#search:checked ~ .container header nav label.but_search::before {
    content: '';
    display: block;
    background-color: var(--header-color-mini_bar);
    width: 3px;
    height: 100%;
    position: absolute;
    top: 0;
    left: calc(var(--header-padding-horizontal) * -1);
}

body input[name="nav"]#search:checked ~ .container header nav label.but_search {
    color: var(--color-hover_link);
}

body input[name="nav"]#search:checked ~ .container header nav label.but_search img {
    filter: opacity(1);
}

body input[name="nav"]#library:checked ~ .container header nav label.library::before {
    content: '';
    display: block;
    background-color: var(--header-color-mini_bar);
    width: 3px;
    height: 100%;
    position: absolute;
    top: 0;
    left: calc(var(--header-padding-horizontal) * -1);
}

body input[name="nav"]#library:checked ~ .container header nav label.library {
    color: var(--color-hover_link);
}

body input[name="nav"]#library:checked ~ .container header nav label.library img {
    filter: opacity(1);
}

/* PLAYLIST ______________________________*/
.playlist {
    padding: 0 var(--header-padding-horizontal);
    flex-grow: 1;
}

.playlist h3 {
    color: var(--header-color-title);
    text-transform: uppercase;
    padding: 10px 0;
}

.playlist button {
    border: none;
    background: none;
    color: var(--color-default_link);
    align-items: center;
    gap: 10px;
    font-size: 1rem;
    cursor: pointer;
    transition: color var(--header-transition-time);
}

/* HOVER ______________________________*/
.playlist button:hover {
    color: var(--color-hover_link);
}

.playlist button:hover i {
    background-color: var(--color-hover_link);
}

.playlist button i {
    background-color: var(--color-default_link);
    color: black;
    width: 37px;
    aspect-ratio: 1;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 1.4rem;
    border-radius: 2px;
    transition: background-color var(--header-transition-time);
}

.playlist ul a {
    position: relative;
    color: var(--color-default_link);
    transition: color var(--header-transition-time);
    height: 2rem;
    display: block;
    line-height: 2rem;
}

.playlist ul a:hover {
    color: var(--color-hover_link);
}

/* ACTIVER ______________________________*/
.playlist ul a:active::before {
    content: '';
    display: block;
    background-color: var(--header-color-mini_bar);
    width: 3px;
    height: 100%;
    position: absolute;
    top: 0;
    left: calc(var(--header-padding-horizontal) * -1);
}
/* ... */

